# event_scraper

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: zacheta_example.py
src/event_scraper/: __init__.py  __main__.py  base.py  models.py  server.py
src/event_scraper/scrapers/: __init__.py  zacheta.py
tests/: conftest.py  test_models.py  test_server.py  test_zacheta.py
