[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-scraper"
version = "0.1.0"
description = "Modular event scraper with MCP integration"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.1",
    "beautifulsoup4>=4.14",
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
